# polls-app

./: .gitlab-ci.yml  .travis.yml  bitbucket-pipelines.yml  django-pipeline.gocd.yaml  pyproject.toml
mysite/: settings.py
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
