[tool.poetry]
name = "polls-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.6"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
